--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,7 @@
     <form action="/login" method="POST">
         <label for="email">Enter your email</label>
         <input type="text" name="email" id="email">
+        <button type="submit" class="submit">Submit</button>
     </form>
     
 </body>
