Updated model.py create user method, edited homepage.html

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>This is the homepage</h1>
+
+    <h2>Current Scheduled Reservations</h2>
+
+    <h2>Search for a New Reservation</h2>
+    <input type="date" id="start_date" name="start_date">
+
+
 </body>
 </html>
