Removed end date from model.py, added time input to homepage.html

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,7 +12,10 @@
     <h2>Current Scheduled Reservations</h2>
 
     <h2>Search for a New Reservation</h2>
+    <form action="/search">
     <input type="date" id="start_date" name="start_date">
+    <input type="time" id="start_time" name="start_time">
+    </form>
 
 
 </body>
