--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melon Reservations</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block body %}
     <h1>Hello and Welcome to Melon Reservation!</h1>
 
     <h2>Login</h2>
@@ -16,5 +10,4 @@
         <button type="submit" class="submit">Submit</button>
     </form>
     
-</body>
-</html>
+{% endblock %}
