--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
+
     <h1>Hello and Welcome to Melon Reservation!</h1>
 
     <h2>Login</h2>
