Added calendar.html, added script tags and js file

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,5 +11,8 @@
     <input type="date" id="start_date" name="start_date">
     <input type="time" id="start_time" name="start_time">
     </form>
+    
+    <h2>View Calendar Events</h2>
+    <a href="/calendar">Click here</a>
 
 {% endblock %}
