Updated reservations.html, created route to search reservations

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,8 @@
     <h2>Search for a New Reservation</h2>
     <form action="/search">
     <input type="date" id="start_date" name="start_date">
-    <input type="time" id="start_time" name="start_time">
+    <!-- <input type="time" id="start_time" name="start_time"> -->
+    <button type="submit">Submit</button>
     </form>
     
     <h2>View Calendar Events</h2>
