Edited search route and reservations page to display reservations for selected date

--- a/templates/reservations.html
+++ b/templates/reservations.html
@@ -3,6 +3,15 @@
 {% block content %}
 
     <h1>Reservations</h1>
+    <ul>
+        {% if not data %}
+        <li>No reservations available for the selected date</li>
+        {% endif %}
+        
+        {% for item in data %}
+        <li>{{ item.name }} is at {{ item.date }}</li>
+        {% endfor %}
+    </ul>
 
     
 {% endblock %}
