--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,6 +5,15 @@
     <h1>This is the homepage</h1>
 
     <h2>Current Scheduled Reservations</h2>
+    <ul>
+    {% if not user.reservations %}
+    <li>No reservations scheduled yet.</li>
+    {% endif %}
+
+    {% for reservation in user.reservations %}
+    <li>{{ reservation.rez_name }} scheduled on {{ reservation.start_date }}</li>
+    {% endfor %}
+    </ul>
 
     <h2>Search for a New Reservation</h2>
     <form action="/search">
