Added route to display reservations on the user calendar

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    <h1>This is the calendar</h1>
+    <h1>Reservation Calendar</h1>
 
 <div id="calendar"></div>
 <!-- script tag for calendar.js file -->
