--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>This is the homepage</h1>
+    <h1>Welcome, {{ user.email }}!</h1>
 
     <h2>Current Scheduled Reservations</h2>
     <ul>
