--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar" style="background-color: #e3f2fd;">
         <!-- Navbar content -->
-        <div class="container-md">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">Melon Tasting Scheduler</a>
           </div>
     </nav>
@@ -24,7 +24,7 @@
 
 
     <footer>
-        <div class="footer">Melon Reservation</div>
+        <div class="footer">@Melon Reservation 2022</div>
     </footer>
 </body>
 </html>
