--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -8,11 +8,14 @@
 
 {% block content %}
 
+<div class="container">
     <h1>Reservation Calendar</h1>
 
 <div id="calendar"></div>
 <!-- script tag for calendar.js file -->
 <script src="/static/js/calendar.js"></script>
+</div>
+
 </div>
 
     
