--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<div class="container">
     <h1>Welcome, {{ user.email }}!</h1>
 
     <h2>Current Scheduled Reservations</h2>
@@ -24,5 +25,6 @@
     
     <h2>View Calendar Events</h2>
     <a href="/calendar">Click here</a>
+</div>
 
 {% endblock %}
