--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<div class="container">
     <h1>Hello and Welcome to Melon Reservation!</h1>
 
     <h2>Login</h2>
@@ -10,5 +11,6 @@
         <input type="text" name="email" id="email">
         <button type="submit" class="submit">Submit</button>
     </form>
+</div>
     
 {% endblock %}
