--- a/templates/reservations.html
+++ b/templates/reservations.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<div class="container">
     <h1>Reservations</h1>
     <ul>
         {% if not data %}
@@ -17,6 +18,6 @@
         </li>
         {% endfor %}
     </ul>
-
+</div>
     
 {% endblock %}
