Added route to return to homepage and button

--- a/templates/reservations.html
+++ b/templates/reservations.html
@@ -18,6 +18,9 @@
         </li>
         {% endfor %}
     </ul>
+    <a href="/home">
+        <button>Go Back To Homepage</button>
+    </a> 
 </div>
     
 {% endblock %}
