--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -10,6 +10,9 @@
 
 <div class="container">
     <h1>Reservation Calendar</h1>
+    <a href="/home">
+        <button>Go Back To Homepage</button>
+    </a> 
 
 <div id="calendar"></div>
 <!-- script tag for calendar.js file -->
