--- a/templates/login.html
+++ b/templates/login.html
@@ -2,15 +2,21 @@
 
 {% block content %}
 
-<div class="container">
-    <h1>Hello and Welcome to Melon Reservation!</h1>
+<div class="container-fluid">
 
-    <h2>Login</h2>
+    <div class="image">
+    <h1 class="header">Welcome to Melon Reservation!</h1>
+    </div>
+
+    <div class="login">
     <form action="/login" method="POST">
         <label for="email">Enter your email</label>
         <input type="text" name="email" id="email">
         <button type="submit" class="submit">Submit</button>
     </form>
+    </div>
+    
+
 </div>
     
 {% endblock %}
