--- a/templates/reservations.html
+++ b/templates/reservations.html
@@ -10,9 +10,9 @@
         {% endif %}
 
         {% for item in data %}
-        <li>{{ item.name }} is at {{ item.date }}
+        <li>{{ item.name }} is on {{ item.date }} at {{ item.time }}
             <form action="/create_rez" method="POST">
-            <input type="checkbox" name="reservation" value="{{ item.date }},{{ item.name }}">
+            <input type="checkbox" name="reservation" value="{{ item.date }}, {{ item.time }}, {{ item.name }}">
             <button type="submit">Submit</button>
             </form>
         </li>
