--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,7 +12,11 @@
     {% endif %}
 
     {% for reservation in user.reservations %}
-    <li>{{ reservation.rez_name }} scheduled on {{ reservation.start_date }} at {{ reservation.start_time }}</li>
+    <li>{{ reservation.rez_name }} scheduled on {{ reservation.start_date }} at {{ reservation.start_time }}
+        <form action="/delete_rez" method="POST">
+            <button type="submit" name="rez_id" value="{{ reservation.rez_id }}">Delete</button>
+        </form>
+    </li>
     {% endfor %}
     </ul>
 
