--- a/templates/base.html
+++ b/templates/base.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Melon Reservation</title>
     <!-- Bootstrap CSS and JS links -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-     <!-- CSS link -->
-     <link rel="stylesheet" href="/static/css/style.css">
-    {% block head %}
-    {% endblock %}
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <!-- CSS link -->
+    <link rel="stylesheet" href="/static/css/style.css" />
+    {% block head %} {% endblock %}
+  </head>
 
-
-<body>
-    <nav class="navbar" style="background-color: #e3f2fd;">
-        <!-- Navbar content -->
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Melon Tasting Scheduler</a>
-          </div>
+  <body>
+    <nav class="navbar" style="background-color: #e3f2fd">
+      <!-- Navbar content -->
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Melon Tasting Scheduler</a>
+      </div>
     </nav>
-    
+
     {% block content %}BODY CONTENT GOES HERE{% endblock %}
-   
-    
 
     <footer>
-        <div class="footer">@Melon Reservation 2022</div>
+      <div class="footer">@Melon Reservation 2022</div>
     </footer>
-</body>
-
+  </body>
 </html>
